--- a/MidnightArtifact/app/src/main/res/layout/activity_postingsbyclassification.xml
+++ b/MidnightArtifact/app/src/main/res/layout/activity_postingsbyclassification.xml
@@ -70,35 +70,10 @@
         android:layout_height="1px"
         android:background="@color/color_line" />
 
-    <RelativeLayout
+    <com.base.baselibs.widget.NoSwipeViewPager
+        android:id="@+id/postings_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <com.handmark.pulltorefresh.library.PullToRefreshListView
-            xmlns:ptr="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/pullToRefreshListView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:divider="@color/color_line"
-            android:dividerHeight="@dimen/dimen_dp_5"
-            android:scrollbars="none"
-            ptr:ptrAnimationStyle="flip"
-            ptr:ptrMode="disabled"
-            ptr:ptrScrollingWhileRefreshingEnabled="true" />
-
-        <ImageView
-            android:id="@+id/postings_totop_iv"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:visibility="gone"
-            android:layout_width="@dimen/dimen_dp_40"
-            android:layout_height="@dimen/dimen_dp_40"
-            android:layout_marginBottom="@dimen/dimen_dp_30"
-            android:layout_marginRight="@dimen/dimen_dp_10"
-            android:src="@mipmap/icon_list_backtotop"/>
-    </RelativeLayout>
-
+        android:layout_weight="1"/>
 
 </LinearLayout>
