--- a/MidnightArtifact/app/src/main/res/layout/activity_orderdetail.xml
+++ b/MidnightArtifact/app/src/main/res/layout/activity_orderdetail.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/one_ll"
-        android:layout_marginTop="@dimen/dimen_dp_5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_dp_5"
         android:background="@color/color_white"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/order_detail_icon_order"/>
+            android:src="@mipmap/order_detail_icon_order" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -25,76 +25,76 @@
 
             <TextView
                 android:id="@+id/order_detail_one_tx"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="@dimen/dimen_dp_70"
                 android:layout_height="wrap_content"
+                android:text="订单编号："
                 android:textColor="#5D5D5D"
-                android:text="订单编号："/>
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_orderid_tx"
-                android:layout_toRightOf="@+id/order_detail_one_tx"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#70B4DA"/>
+                android:layout_toRightOf="@+id/order_detail_one_tx"
+                android:textColor="#70B4DA"
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_two_tx"
-                android:layout_below="@+id/order_detail_one_tx"
-                android:layout_marginTop="@dimen/dimen_dp_5"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="@dimen/dimen_dp_70"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/order_detail_one_tx"
+                android:layout_marginTop="@dimen/dimen_dp_5"
+                android:text="订单状态："
                 android:textColor="#5D5D5D"
-                android:text="订单状态："/>
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_state_tx"
-                android:layout_toRightOf="@+id/order_detail_one_tx"
-                android:layout_marginTop="@dimen/dimen_dp_5"
-                android:layout_below="@+id/order_detail_one_tx"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#1818E0"/>
+                android:layout_below="@+id/order_detail_one_tx"
+                android:layout_marginTop="@dimen/dimen_dp_5"
+                android:layout_toRightOf="@+id/order_detail_one_tx"
+                android:textColor="#1818E0"
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_three_tx"
-                android:layout_below="@+id/order_detail_two_tx"
-                android:layout_marginTop="@dimen/dimen_dp_5"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="@dimen/dimen_dp_70"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/order_detail_two_tx"
+                android:layout_marginTop="@dimen/dimen_dp_5"
+                android:text="订单时间："
                 android:textColor="#5D5D5D"
-                android:text="订单时间："/>
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_time_tx"
-                android:layout_toRightOf="@+id/order_detail_one_tx"
-                android:layout_below="@+id/order_detail_two_tx"
-                android:layout_marginTop="@dimen/dimen_dp_5"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#5D5D5D"/>
+                android:layout_below="@+id/order_detail_two_tx"
+                android:layout_marginTop="@dimen/dimen_dp_5"
+                android:layout_toRightOf="@+id/order_detail_one_tx"
+                android:textColor="#5D5D5D"
+                android:textSize="@dimen/dimen_sp_14" />
 
         </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/two_ll"
-        android:layout_below="@+id/one_ll"
-        android:layout_marginTop="@dimen/dimen_dp_5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/one_ll"
+        android:layout_marginTop="@dimen/dimen_dp_5"
         android:background="@color/color_white"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/order_detail_icon_user"/>
+            android:src="@mipmap/order_detail_icon_user" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -104,156 +104,202 @@
 
             <TextView
                 android:id="@+id/order_detail_four_tx"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="@dimen/dimen_dp_70"
                 android:layout_height="wrap_content"
+                android:text="收货人："
                 android:textColor="#5D5D5D"
-                android:text="收货人："/>
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_name_tx"
-                android:layout_toRightOf="@+id/order_detail_four_tx"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#5D5D5D"/>
+                android:layout_toRightOf="@+id/order_detail_four_tx"
+                android:textColor="#5D5D5D"
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_five_tx"
-                android:layout_below="@+id/order_detail_name_tx"
-                android:layout_marginTop="@dimen/dimen_dp_5"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="@dimen/dimen_dp_70"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/order_detail_name_tx"
+                android:layout_marginTop="@dimen/dimen_dp_5"
+                android:text="联系手机："
                 android:textColor="#5D5D5D"
-                android:text="联系手机："/>
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_phone_tx"
-                android:layout_toRightOf="@+id/order_detail_five_tx"
-                android:layout_marginTop="@dimen/dimen_dp_5"
-                android:layout_below="@+id/order_detail_name_tx"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#5D5D5D"/>
+                android:layout_below="@+id/order_detail_name_tx"
+                android:layout_marginTop="@dimen/dimen_dp_5"
+                android:layout_toRightOf="@+id/order_detail_five_tx"
+                android:textColor="#5D5D5D"
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_six_tx"
-                android:layout_below="@+id/order_detail_five_tx"
-                android:layout_marginTop="@dimen/dimen_dp_5"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="@dimen/dimen_dp_70"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/order_detail_five_tx"
+                android:layout_marginTop="@dimen/dimen_dp_5"
+                android:text="收货地址："
                 android:textColor="#5D5D5D"
-                android:text="收货地址："/>
+                android:textSize="@dimen/dimen_sp_14" />
 
             <TextView
                 android:id="@+id/order_detail_address_tx"
-                android:layout_toRightOf="@+id/order_detail_six_tx"
-                android:layout_below="@+id/order_detail_five_tx"
-                android:layout_marginTop="@dimen/dimen_dp_5"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#5D5D5D"/>
+                android:layout_below="@+id/order_detail_five_tx"
+                android:layout_marginTop="@dimen/dimen_dp_5"
+                android:layout_toRightOf="@+id/order_detail_six_tx"
+                android:textColor="#5D5D5D"
+                android:textSize="@dimen/dimen_sp_14" />
 
         </RelativeLayout>
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/three_rl"
-        android:layout_below="@+id/two_ll"
+    <LinearLayout
+        android:id="@+id/four_rl"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_dp_70"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/two_ll"
+        android:visibility="gone"
         android:layout_marginTop="@dimen/dimen_dp_5"
-        android:paddingLeft="@dimen/dimen_dp_10"
-        android:paddingRight="@dimen/dimen_dp_10"
+        android:background="@drawable/white_hollow_selector"
         android:paddingTop="@dimen/dimen_dp_5"
         android:paddingBottom="@dimen/dimen_dp_5"
         android:clickable="true"
-        android:background="@color/color_white">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="@dimen/dimen_dp_25"
+            android:layout_height="@dimen/dimen_dp_25"
+            android:layout_margin="@dimen/dimen_dp_10"
+            android:src="@mipmap/wuliu" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="物流追踪："
+            android:textSize="@dimen/dimen_sp_14"
+            android:textColor="#129a9b"/>
+
+        <TextView
+            android:id="@+id/order_detail_logistics_tx"
+            android:layout_weight="1"
+            android:singleLine="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/dimen_sp_14"
+            android:textColor="#129a9b"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_dp_15"
+            android:layout_marginLeft="@dimen/dimen_dp_10"
+            android:layout_marginRight="@dimen/dimen_dp_10"
+            android:src="@mipmap/right_arrow" />
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/three_rl"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_dp_70"
+        android:layout_below="@+id/four_rl"
+        android:layout_marginTop="@dimen/dimen_dp_5"
+        android:background="@color/color_white"
+        android:clickable="true"
+        android:paddingBottom="@dimen/dimen_dp_5"
+        android:paddingLeft="@dimen/dimen_dp_10"
+        android:paddingRight="@dimen/dimen_dp_10"
+        android:paddingTop="@dimen/dimen_dp_5">
 
         <ImageView
             android:id="@+id/order_detail_head_iv"
             android:layout_width="@dimen/dimen_dp_65"
             android:layout_height="@dimen/dimen_dp_65"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/orderdetail_title_tx"
-            android:layout_toRightOf="@+id/order_detail_head_iv"
-            android:layout_marginLeft="@dimen/dimen_dp_10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_dp_10"
+            android:layout_toRightOf="@+id/order_detail_head_iv"
             android:maxLines="2"
-            android:textSize="@dimen/dimen_sp_16"
-            android:textColor="#616164"/>
+            android:textColor="#616164"
+            android:textSize="@dimen/dimen_sp_16" />
 
         <LinearLayout
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/order_detail_head_iv"
-            android:layout_marginLeft="@dimen/dimen_dp_10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="@dimen/dimen_dp_10"
+            android:layout_toRightOf="@+id/order_detail_head_iv"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/order_detail_price_tx"
                 android:layout_width="@dimen/dimen_dp_120"
-                android:textSize="@dimen/dimen_sp_14"
                 android:layout_height="wrap_content"
-                android:text="单价："/>
+                android:text="单价："
+                android:textSize="@dimen/dimen_sp_14" />
+
             <TextView
                 android:id="@+id/order_detail_num_tx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/dimen_sp_14"
-                android:text="数量："/>
+                android:text="数量："
+                android:textSize="@dimen/dimen_sp_14" />
         </LinearLayout>
     </RelativeLayout>
 
     <ImageView
         android:id="@+id/line_iv"
-        android:layout_below="@+id/three_rl"
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/color_line"/>
+        android:layout_below="@+id/three_rl"
+        android:background="@color/color_line" />
 
     <LinearLayout
-        android:layout_below="@+id/line_iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/line_iv"
+        android:background="@color/color_white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dimen_dp_5"
         android:paddingLeft="@dimen/dimen_dp_10"
         android:paddingRight="@dimen/dimen_dp_10"
-        android:paddingTop="@dimen/dimen_dp_5"
-        android:paddingBottom="@dimen/dimen_dp_5"
-        android:gravity="center_vertical"
-        android:background="@color/color_white"
-        android:orientation="horizontal">
+        android:paddingTop="@dimen/dimen_dp_5">
 
         <TextView
             android:id="@+id/order_detail_totalprice_tx"
-            android:textSize="@dimen/dimen_sp_14"
-            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:gravity="right"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="总金额："
             android:textColor="#DC44A0"
-            android:text="总金额："/>
+            android:textSize="@dimen/dimen_sp_14" />
     </LinearLayout>
 
     <Button
         android:id="@+id/order_detail_bt"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/dimen_dp_40"
-        android:layout_marginRight="@dimen/dimen_dp_40"
-        android:layout_marginBottom="@dimen/dimen_dp_10"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_dp_40"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/dimen_dp_10"
+        android:layout_marginLeft="@dimen/dimen_dp_40"
+        android:layout_marginRight="@dimen/dimen_dp_40"
+        android:background="@drawable/bt_orderlist_selector"
         android:text="联系客服"
-        android:textSize="@dimen/dimen_sp_13"
         android:textColor="#50D173"
-        android:background="@drawable/bt_orderlist_selector"/>
+        android:textSize="@dimen/dimen_sp_13" />
 </RelativeLayout>
