--- a/MidnightArtifact/app/src/main/res/values/dimens.xml
+++ b/MidnightArtifact/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="dimen_dp_13">13dp</dimen>
     <dimen name="dimen_dp_15">15dp</dimen>
     <dimen name="dimen_dp_16">16dp</dimen>
+    <dimen name="dimen_dp_19">19dp</dimen>
     <dimen name="dimen_dp_20">20dp</dimen>
     <dimen name="dimen_dp_25">25dp</dimen>
     <dimen name="dimen_dp_30">30dp</dimen>
@@ -51,4 +52,5 @@
     <dimen name="dimen_sp_17">17sp</dimen>
     <dimen name="dimen_sp_18">18sp</dimen>
     <dimen name="dimen_sp_30">30sp</dimen>
+    <dimen name="dimen_sp_35">35sp</dimen>
 </resources>
