--- a/MidnightArtifact/app/src/main/res/layout/activity_recharge.xml
+++ b/MidnightArtifact/app/src/main/res/layout/activity_recharge.xml
@@ -4,27 +4,91 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/recharge_top_iv"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/color_white"
-        android:src="@mipmap/shop_back_img"/>
+        android:layout_height="@dimen/dimen_dp_80"
+        android:background="#cd8852"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/recharge_surpluscoin_tx"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_dp_40"
-        android:gravity="center_vertical"
-        android:background="@color/color_white"
-        android:textColor="@color/color_black"
-        android:paddingLeft="@dimen/dimen_dp_15"
-        android:text="剩余金币：47"/>
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/recharge_totalcoin_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="130"
+                android:textSize="@dimen/dimen_sp_30"
+                android:textColor="@color/color_white"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/dimen_sp_14"
+                android:text="总金币"
+                android:textColor="@color/color_white"/>
+        </LinearLayout>
+
+        <ImageView
+            android:layout_marginTop="@dimen/dimen_dp_10"
+            android:layout_marginBottom="@dimen/dimen_dp_10"
+            android:background="@color/color_white"
+            android:layout_width="@dimen/dimen_dp_1"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/recharge_canoutcoin_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="@dimen/dimen_sp_30"
+                android:textColor="@color/color_white"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/dimen_sp_14"
+                android:text="可兑换金币"
+                android:textColor="@color/color_white"/>
+        </LinearLayout>
+    </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_dp_1"
         android:src="@color/color_line"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_white">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_dp_3"
+            android:layout_centerVertical="true"
+            android:background="@color/color_black" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_dp_30"
+            android:background="@color/color_white"
+            android:paddingLeft="@dimen/dimen_dp_10"
+            android:paddingRight="@dimen/dimen_dp_10"
+            android:paddingTop="@dimen/dimen_dp_5"
+            android:paddingBottom="@dimen/dimen_dp_5"
+            android:text="充值钜惠，最高30％"
+            android:textColor="@color/color_black"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/recharge_listview"
