--- a/MidnightArtifact/app/src/main/res/layout/item_recharge_view.xml
+++ b/MidnightArtifact/app/src/main/res/layout/item_recharge_view.xml
@@ -5,8 +5,7 @@
     android:background="@color/color_white"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingLeft="@dimen/dimen_dp_10"
-    android:paddingRight="@dimen/dimen_dp_10">
+    android:padding="@dimen/dimen_dp_10">
 
     <ImageView
         android:layout_width="@dimen/dimen_dp_20"
@@ -30,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+送10%"
-        android:textColor="#A6006B"
+        android:textColor="#bd8b81"
         android:textSize="@dimen/dimen_sp_15" />
 
     <Button
@@ -38,9 +37,9 @@
         android:layout_width="@dimen/dimen_dp_60"
         android:layout_height="@dimen/dimen_dp_30"
         android:layout_centerInParent="true"
-        android:background="@drawable/bt_itemrecharge_selector"
+        android:background="@drawable/bt_itemrecharge_two_selector"
         android:text="$30.00"
-        android:textColor="@color/color_white"
+        android:textColor="@color/color_black"
         android:textSize="@dimen/dimen_sp_11"/>
 
 </LinearLayout>
