--- a/MidnightArtifact/app/src/main/res/layout/part_personal_head_bg.xml
+++ b/MidnightArtifact/app/src/main/res/layout/part_personal_head_bg.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:scaleType="centerCrop"
+    android:background="@color/color_white"
     android:src="@mipmap/personal_head_bg">
 
 </ImageView>
