--- a/MidnightArtifact/app/src/main/res/layout/item_p2pchat_text_view.xml
+++ b/MidnightArtifact/app/src/main/res/layout/item_p2pchat_text_view.xml
@@ -80,6 +80,36 @@
                 android:layout_marginLeft="@dimen/dimen_dp_10"
                 android:layout_marginTop="@dimen/dimen_dp_5"
                 android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/item_p2pchat_audio_left_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_dp_5"
+                android:gravity="center_vertical|left"
+                android:background="@drawable/item_message_left_bg"
+                android:visibility="gone"
+                android:clickable="true"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/item_p2pchat_audio_left_tx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginLeft="@dimen/dimen_dp_5"
+                    android:text="0''"
+                    android:textColor="@color/color_black"
+                    android:textSize="@dimen/dimen_sp_15" />
+
+                <ImageView
+                    android:id="@+id/item_p2pchat_audio_left_iv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/audio_left_anim"
+                    android:visibility="visible" />
+
+            </LinearLayout>
         </FrameLayout>
 
         <LinearLayout
@@ -147,6 +177,38 @@
                     android:layout_marginRight="@dimen/dimen_dp_10"
                     android:gravity="center"
                     android:visibility="gone" />
+
+                <LinearLayout
+                    android:id="@+id/item_p2pchat_audio_right_ll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_dp_5"
+                    android:gravity="center_vertical|left"
+                    android:background="@drawable/item_message_right_bg"
+                    android:visibility="gone"
+                    android:clickable="true"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/item_p2pchat_audio_right_iv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/audio_right_anim"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/item_p2pchat_audio_right_tx"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginRight="@dimen/dimen_dp_5"
+                        android:text="0''"
+                        android:textColor="@color/color_black"
+                        android:textSize="@dimen/dimen_sp_15" />
+
+                </LinearLayout>
+
+
             </FrameLayout>
 
         </LinearLayout>
