--- a/MidnightArtifact/app/src/main/res/values/colors.xml
+++ b/MidnightArtifact/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="color_black">#000000</color>
     <color name="color_red">#ff0000</color>
     <color name="color_blue">#0000ff</color>
+    <color name="color_gift_all">#22000000</color>
 
     <color name="main_title_orange_color">#E55D46</color>
     <color name="activity_default_bg">#efeff4</color>
