--- a/MidnightArtifact/app/src/main/res/layout/item_postingsdetail_comment_view.xml
+++ b/MidnightArtifact/app/src/main/res/layout/item_postingsdetail_comment_view.xml
@@ -15,6 +15,7 @@
             android:layout_marginLeft="@dimen/dimen_dp_10"
             android:layout_marginTop="@dimen/dimen_dp_5"
             android:layout_marginBottom="@dimen/dimen_dp_5"
+            android:clickable="true"
             android:layout_width="40dp"
             android:layout_height="40dp">
 
@@ -77,6 +78,33 @@
                 android:background="@drawable/level_blue_bg"
                 android:textSize="@dimen/dimen_sp_10"
                 android:textColor="@color/color_white"/>
+
+            <RelativeLayout
+                android:paddingLeft="@dimen/dimen_dp_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/item_postingsdetail_comment_vip_tx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:paddingLeft="@dimen/dimen_dp_5"
+                    android:paddingRight="@dimen/dimen_dp_5"
+                    android:background="@drawable/level_red_bg"
+                    android:text="VIP.0"
+                    android:textColor="@color/color_white"
+                    android:textSize="@dimen/dimen_sp_10" />
+
+                <ImageView
+                    android:id="@+id/item_postingsdetail_comment_svip_iv"
+                    android:layout_width="@dimen/dimen_dp_50"
+                    android:layout_height="@dimen/dimen_dp_13"
+                    android:layout_centerHorizontal="true"
+                    android:visibility="gone"
+                    android:src="@mipmap/other_svip_ic" />
+
+            </RelativeLayout>
         </LinearLayout>
 
         <TextView
