--- a/MidnightArtifact/app/src/main/res/layout/part_personal_head_view.xml
+++ b/MidnightArtifact/app/src/main/res/layout/part_personal_head_view.xml
@@ -59,6 +59,30 @@
             android:textColor="#7F2505"
             android:text="name"/>
 
+        <TextView
+            android:id="@+id/personal_vip_tx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/personal_name_tx"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/dimen_dp_5"
+            android:paddingLeft="@dimen/dimen_dp_5"
+            android:paddingRight="@dimen/dimen_dp_5"
+            android:background="@drawable/level_red_bg"
+            android:text="VIP.0"
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/dimen_sp_12" />
+
+        <ImageView
+            android:id="@+id/personal_svip_iv"
+            android:layout_width="@dimen/dimen_dp_50"
+            android:layout_height="@dimen/dimen_dp_16"
+            android:layout_below="@+id/personal_name_tx"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/dimen_dp_5"
+            android:src="@mipmap/other_svip_ic" />
+
     </RelativeLayout>
 
     <ImageView
