--- a/MidnightArtifact/app/src/main/res/layout/part_postingsdetail_head_view.xml
+++ b/MidnightArtifact/app/src/main/res/layout/part_postingsdetail_head_view.xml
@@ -15,6 +15,7 @@
 
         <RelativeLayout
             android:id="@+id/blogdetail_head_rl"
+            android:clickable="true"
             android:layout_width="@dimen/dimen_dp_40"
             android:layout_height="@dimen/dimen_dp_40">
 
@@ -71,6 +72,36 @@
             android:text="Lv 1"
             android:textColor="@color/color_white"
             android:textSize="@dimen/dimen_sp_12" />
+
+        <RelativeLayout
+            android:layout_toRightOf="@+id/blogdetail_level_tx"
+            android:layout_marginTop="@dimen/dimen_dp_5"
+            android:layout_below="@+id/blogdetail_name_tx"
+            android:layout_marginLeft="@dimen/dimen_dp_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/blogdetail_vip_tx"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:paddingLeft="@dimen/dimen_dp_5"
+                android:paddingRight="@dimen/dimen_dp_5"
+                android:background="@drawable/level_red_bg"
+                android:text="VIP.0"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/dimen_sp_12" />
+
+            <ImageView
+                android:id="@+id/blogdetail_svip_iv"
+                android:layout_width="@dimen/dimen_dp_50"
+                android:layout_height="@dimen/dimen_dp_16"
+                android:layout_centerHorizontal="true"
+                android:visibility="gone"
+                android:src="@mipmap/other_svip_ic" />
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/bloglist_time_tx"
