--- a/MidnightArtifact/app/src/main/res/layout/item_p2pchat_text_view.xml
+++ b/MidnightArtifact/app/src/main/res/layout/item_p2pchat_text_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:img="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_p2pchat_root_Rl"
+    android:clickable="true"
     android:paddingTop="@dimen/dimen_dp_5"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
