1，修改若干bug 2，与ios链条发送消息

--- a/MidnightArtifact/app/src/main/res/layout/fragment_message.xml
+++ b/MidnightArtifact/app/src/main/res/layout/fragment_message.xml
@@ -5,7 +5,8 @@
 
     <ListView
         android:id="@+id/message_listview"
-        android:divider="@null"
+        android:divider="@color/color_line"
+        android:dividerHeight="@dimen/dimen_dp_1"
         android:layout_below="@+id/mall_top_title_ll"
         android:layout_marginTop="@dimen/dimen_dp_f3"
         android:layout_width="match_parent"
