--- a/MidnightArtifact/app/src/main/res/layout/item_p2pchat_text_view.xml
+++ b/MidnightArtifact/app/src/main/res/layout/item_p2pchat_text_view.xml
@@ -71,7 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/item_message_left_bg"
-                android:maxWidth="@dimen/dimen_dp_250"
+                android:maxWidth="@dimen/dimen_dp_70"
                 android:layout_marginTop="@dimen/dimen_dp_5"
                 android:visibility="gone" />
 
@@ -166,9 +166,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/item_message_right_bg"
+                    android:scaleType="centerInside"
                     android:layout_marginTop="@dimen/dimen_dp_5"
-                    android:maxWidth="@dimen/dimen_dp_250"
-                    android:gravity="center"
+                    android:maxWidth="@dimen/dimen_dp_70"
                     android:visibility="gone" />
 
                 <ImageView
