--- a/MidnightArtifact/app/src/main/res/layout/item_image_view.xml
+++ b/MidnightArtifact/app/src/main/res/layout/item_image_view.xml
@@ -14,11 +14,14 @@
         android:layout_width="@dimen/dimen_dp_30"
         android:layout_height="@dimen/dimen_dp_30">
 
-        <ImageView
+        <com.base.baselibs.widget.CustomImageView
+            xmlns:img="http://schemas.android.com/apk/res-auto"
             android:id="@+id/item_goodsdetail_head_iv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher"
+            img:circle="false"
+            img:radius="@dimen/dimen_dp_5"/>
 
         <ImageView
             android:id="@+id/item_goodsdetail_gender_iv"
@@ -28,6 +31,17 @@
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@+id/personal_name_tx"
             android:src="@mipmap/personal_man_ic"/>
+
+        <com.base.baselibs.widget.CustomImageView
+            xmlns:img="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/item_goodsdetail_verify_img"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_dp_13"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            img:circle="false"
+            img:radius="@dimen/dimen_dp_5"
+            android:src="@mipmap/personal_identification"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -59,6 +73,33 @@
             android:background="@drawable/level_blue_bg"
             android:textSize="@dimen/dimen_sp_10"
             android:textColor="@color/color_white"/>
+
+        <RelativeLayout
+            android:paddingLeft="@dimen/dimen_dp_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/item_goodsdetail_comment_vip_tx"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:paddingLeft="@dimen/dimen_dp_5"
+                android:paddingRight="@dimen/dimen_dp_5"
+                android:background="@drawable/level_red_bg"
+                android:text="VIP.0"
+                android:textColor="@color/color_white"
+                android:textSize="@dimen/dimen_sp_10" />
+
+            <ImageView
+                android:id="@+id/item_goodsdetail_comment_svip_iv"
+                android:layout_width="@dimen/dimen_dp_50"
+                android:layout_height="@dimen/dimen_dp_13"
+                android:layout_centerHorizontal="true"
+                android:visibility="gone"
+                android:src="@mipmap/other_svip_ic" />
+
+        </RelativeLayout>
     </LinearLayout>
 
     <TextView
